php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #28087 mysql.trace_mode in php.ini is not usable
Submitted: 2004-04-21 10:50 UTC Modified: 2004-04-23 19:04 UTC
Votes:1
Avg. Score:1.0 ± 0.0
Reproduced:0 of 1 (0.0%)
From: xuefer at 21cn dot com Assigned:
Status: Closed Package: MySQL related
PHP Version: 4.3.6 OS: all
Private report: No CVE-ID: None
 [2004-04-21 10:50 UTC] xuefer at 21cn dot com
Description:
------------
php_mysql.c in php4cvs
line 428
-	MySG(trace_mode) = 0;
+	mysql_globals->trace_mode = 0;



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-04-23 13:57 UTC] phpdev at martinsojka dot de
... doesn't even compile (at least, without ZTS).

What's your point?
 [2004-04-23 14:25 UTC] xuefer at 21cn dot com
oops, sorry. simply ignore my "fix".
MySG(trace_mode) just shouldn't be set to 0
should be the value in ini

btw: ini_set works on mysql.trace_mode
 [2004-04-23 19:04 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC