Fixed bug #28087 (Do not force mysql.trace_mode to 0 on every request).